--- a/index.html
+++ b/index.html
@@ -5,7 +5,38 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Döküman</title>
 </head>
-<body>
+<head>
+    <title>Kendim Hakkında</title>
+  </head>
+  <body>
+    <h1>Kendim Hakkında</h1>
+    <div class="box">
     
+      <h2>Adım: John Doe</h2>
+      <p>Ben, John Doe, bir web tasarımcısıyım. Web tasarım ve geliştirme alanlarında 8 yıldan fazla tecrübem var. Ayrıca, veritabanları ve sunucu yönetimi konularında da tecrübeliyim.</p>
+    </div>
+  </body>
+  <body style="background-color: #539295;">
+    <nav>
+        <ul>
+          <li><a href="about.html">Hakkında</a></li>
+          <li><a href="projects.html">Projeler</a></li>
+          <li><a href="contact.html">İletişim</a></li>
+        </ul>
+      </nav>
+      <div style="display: flex; flex-wrap: wrap;">
+        <div style="width: 25%; padding: 10px;">
+          <img src="https://picsum.photos/203/300" alt="" />
+        </div>
+        <div style="width: 25%; padding: 10px;">
+          <img src="https://picsum.photos/202/300" alt="" />
+        </div>
+        <div style="width: 25%; padding: 10px;">
+          <img src="https://picsum.photos/200/300" alt="" />
+        </div>
+        <div style="width: 25%; padding: 10px;">
+          <img src="https://picsum.photos/201/300" alt="" />
+        </div>  
+      </div>
 </body>
 </html>
